[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyape"
authors = [{ name = "zrong", email = "zrongzrong@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version", "description"]
requires-python = ">=3.11"
keywords = ["development", "zrong", "flask", "fastapi"]
classifiers = [
    'Programming Language :: Python :: 3.11',
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: Web Environment',
    'License :: OSI Approved :: BSD License',
    'Operating System :: POSIX :: Linux',
    'Topic :: Internet :: WWW/HTTP :: Site Management',
    'Topic :: Utilities',
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "sqlalchemy >=2.0.15",
    "fabric >=3.2.0",
    "Jinja2",
    "PyMySQL",
    "redis",
    "python-dotenv",
    "cryptography",
    "tomli-w",
    "python-json-logger",
    "httpx",
    "pyzmq",
    "typer[all]",
]

[project.optional-dependencies]
flask = ["flask >=2.3.2, <3", "flask-compress", "marshmallow", "webargs"]
fastapi = ["fastapi >=0.103.2", "uvicorn"]
doc = ["sphinx", "sphinx_rtd_theme", "recommonmark", "rstcheck"]

[project.urls]
Home = "https://blog.zengrong.net/pyape/"
Documentation = "https://pyape.rtfd.io/"
Repository = "https://github.com/zrong/pyape"

[project.scripts]
pyape = "pyape.builder.command:main"
